--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,7 +16,7 @@ jobs:
       uses: docker/metadata-action@v5
       id: meta
       with:
-        images: flared/buildevents
+        images: flared/tailscale-nginx-auth
     - uses: docker/login-action@v3
       if: github.event_name != 'pull_request'
       with:
